<resources>
    <string name="app_name">ObsiDroid</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_cpassword">Confirm Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email_username">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>